<resources>
    <string name="app_name">X-Wing Squad Viewer</string>
    <string name="add_win">Add Win!</string>
    <string name="add_loss">Add Loss!</string>
    <string name="new_squad">New Squad</string>
    <string name="new_name">Enter a Squad Name</string>
    <string name="save_squad_button">Save Squad</string>
    <string name="new_details">Enter Squad Details</string>
    <string name="faction_rebel">Rebel</string>
    <string name="faction_imperial">Imperial</string>
    <string name="faction_scum"><![CDATA[Scum & Villainy]]></string>
    <string name="clear_list">Delete Saved Squads</string>
    <string name="delete_squad">Delete Squad!</string>
    <string name="rebel_only">Only Show Rebels</string>
    <string name="imperial_only">Only Show Imperials</string>
    <string name="scum_only"><![CDATA[Only Show Scum & Villainy]]></string>
    <string name="roll_dice">Dice Roller</string>
    <string name="attack_dice">Attack Dice</string>
    <string name="defence_dice">Defence Dice</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="roll_button">Roll Dice</string>
    <string name="remove_win">Remove Win!</string>
    <string name="remove_loss">Remove Loss!</string>
    <string name="edit_squad">Edit Squad</string>
    <string name="edit_name">Enter a New Name</string>
    <string name="edit_details">Enter New Details</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="dialog_confirm_delete">Confirm Deletion</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_no">Cancel</string>
</resources>
